# webserv

./: .gitignore  42cursus  CMakeLists.txt  CONTRIBUTION.md  LICENSE  Makefile  README.md  default.config  error.html  test.sh  test_script.sh  www
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: refactoring.md
assets/: Configuration-파일-규칙.md
cgi_src/: cgi.cpp  cgi.php  cgi_buf_size.cpp  cgi_cwd.cpp  cgi_max.cpp  cgi_redir.cpp
configs/: www.config
configs/browser_tests/: s_00.config  s_01.config
configs/tests/: Connection
configs/tests/CgiManager/: f_07.config  s_00.config  s_01.config  s_02.config  s_06.config
configs/tests/IOMultiplexing/: s_00.config  s_01.config
configs/tests/ResourceManager/: f_00.config  f_02.config  f_03.config  f_04.config  f_06.config  s_02.config  s_03.config  s_05.config
configs/tests/ResponseFormatter/: f_02.config  f_06.config  f_07.config  f_08.config  f_09.config  f_10.config  f_11.config  s_01.config  s_04.config  s_05.config  s_06.config  s_07.config  s_08.config  s_09.config  s_11.config  s_12.config  s_14.config
configs/tests/Router/: f_00.config  f_01.config  f_02.config  f_03.config  f_04.config  f_05.config  f_06.config  s_00.config  s_03.config  s_04.config  s_05.config  s_06.config  s_08.config  s_09.config  s_10.config  s_11.config  s_12.config  s_13.config
configs/tests/SocketGenerator/: s_01.config  s_02.config  s_03.config
configs/tests/future/: case_10.config  case_11.config  case_25.config  case_26.config
configs/tests/validator/: case_02.conf  case_04.config  case_09.config  case_11.config  case_12.1.conf  case_12.2.conf  case_12.5.conf  case_12.6.conf  case_12.7.conf  case_12.8.conf  case_12.9.conf  case_16.config  case_22.config
configs/tests/validator/RouteBlock/: case_00.config  case_01.config  case_02.config  case_03.config  case_04.config  case_05.config  case_06.config  case_07.config  case_08.config  case_09.config  case_10.config  case_11.config  case_12.config  case_13.config  case_14.config  case_15.config  case_16.config  case_17.config  case_18.config  case_19.config  case_20.config  case_21.config  case_22.config  case_23.config
configs/tests/validator/ServerBlock/: case_02.config  case_03.config  case_04.config  case_05.config  case_06.config  case_07.config  case_08.config  case_09.config  case_10.config  case_11.config  case_12.config  case_13.config  case_14.config  case_15.config  case_16.config  case_18.config  case_19.config  case_20.config  case_21.config  case_22.config  case_23.config  case_24.config  case_25.config  case_26.config  case_27.config  case_28.config  case_29.config  case_30.config  case_31.config
etc/: asciiart.txt
includes/: CgiEnv.hpp  CgiManager.hpp  ClientConnection.hpp  Connection.hpp  FileManager.hpp  HeaderFormatter.hpp  HttpParser.hpp  HttpServer.hpp  ParseUtils.hpp  PassiveSockets.hpp  PathResolver.hpp  ResourceManager.hpp  ResponseData.hpp  ResponseFormatter.hpp  ResponseManager.hpp  Router.hpp  ServerRouter.hpp  SocketGenerator.hpp  Types.hpp  URIParser.hpp  UriParser.hpp  Utils.hpp  Validator.hpp
py_cgi/: file_upload.html  form_get.html  form_out_get.html  form_post.html  index.cpp  py.config  textarea.html
py_cgi/cgi-bin/: hello_get.py  save_file.py  textarea.py
siege/: status_code.txt  stress.txt
srcs/: CgiEnv.cpp  CgiManager.cpp  ClientConnection.cpp  Connection.cpp  FileManager.cpp  HeaderFormatter.cpp  HeaderParser.cpp  HttpParser.cpp  HttpServer.cpp  PassiveSockets.cpp  PathResolver.cpp  ResourceManager.cpp  ResponseFormatter.cpp  ResponseManager.cpp  Router.cpp  ServerRouter.cpp  SocketGenerator.cpp  URIParser.cpp  UriParser.cpp  Validator.cpp  main.cpp
tests/: test.cpp  test_cgi_manager.cpp  test_client_io.cpp  test_connection.cpp  test_parser.cpp  test_parser.hpp  test_path_resolver.cpp  test_resource_manager.cpp  test_response_formatter.cpp  test_router.cpp  test_server_io.cpp  test_socket_generator.cpp  test_validator.cpp
tests/CgiManager/: f_00.txt  f_01.txt  f_02.txt  f_03.txt  f_04.txt  f_05.txt  f_06.txt  f_07.txt  f_08.txt  s_00.txt  s_01.txt  s_02.txt  s_03.txt  s_04.txt  s_05.txt  s_06.txt  s_07.txt  s_08.txt  s_09.txt  s_10.txt  s_11.txt
tests/HttpParser/: f_00.txt  f_01.txt  f_02.txt  f_03.txt  f_04.txt  f_05.txt  f_07.txt  f_08.txt  f_09.txt  f_10.txt  f_11.txt  f_12.txt  f_13.txt  f_14.txt  f_15.txt  f_16.txt  f_17.txt  f_18.txt  f_19.txt  f_20.txt  f_21.txt  f_22.txt  f_23.txt  f_24.txt  f_25.txt  f_26.txt  f_27.txt  f_28.txt  f_29.txt  f_30.txt  f_31.txt  f_32.txt  f_34.txt  f_35.txt  f_36.txt  f_37.txt  f_38.txt  f_39.txt  f_40.txt  s_00.txt  (+26 more)
tests/ResourceManager/: error.html  f_00.txt  f_01.txt  f_02.txt  f_03.txt  f_04.txt  f_05.txt  f_06.txt  f_07.txt  s_00.html  s_00.txt  s_01.txt  s_02.txt  s_03.html  s_03.txt  s_04.txt  s_05.txt  s_06.txt  s_07.txt
tests/ResourceManager/cgi/: cgi.php  cgi_cwd.php  cgi_max.php  cgi_redir.php
tests/ResourceManager/post/: s_05.txt
tests/ResponseFormatter/: autoindex.html  error.html  f_00.txt  f_01.html  f_01.txt  f_02.txt  f_03.txt  f_04.txt  f_05.txt  f_06.txt  f_07.txt  f_09.txt  f_10.txt  f_11.txt  s_00.txt  s_01.css  s_01.txt  s_02.txt  s_03.txt  s_04.txt  s_05.html  s_05.txt  s_06.html  s_07.txt  s_10.txt  s_12.txt  s_13.txt  s_14.txt  s_15.txt
tests/Router/: f_00.txt  f_01.txt  f_02.txt  f_03.txt  f_04.txt  f_05.txt  f_06.txt  s_00.txt  s_01.txt  s_02.txt  s_04.txt  s_05.txt  s_06.txt  s_07.txt  s_08.txt  s_09.txt  s_10.txt  s_11.txt  s_12.txt  s_13.txt
trashbin/: a.
